# word-reciter

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/superpowers/assets/: wireframes-v1.html
docs/superpowers/plans/: 2026-07-02-word-reciter-implementation-plan.md
docs/superpowers/specs/: 2026-07-02-word-reciter-design.md
references/: unique_words.txt  unique_words_with_chinese.txt
scripts/: generate_chinese_meanings.py
src/: router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  smoke_test.rs
src-tauri/src/db/: migrations.rs  mod.rs  study_logs.rs  word_states.rs  words.rs
src-tauri/src/services/: mod.rs  study.rs  word_import.rs
src/api/: tauri.ts
src/components/: ChoiceQuiz.vue  FillQuiz.vue  MarkButtons.vue  RecallQuiz.vue  StudyResultPanel.vue
src/stores/: study.ts  words.ts
src/stores/__tests__/: study.spec.ts  words.spec.ts
src/types/: index.ts
src/views/: HomeView.vue  MarkingView.vue  StudyView.vue
