[package]
name = "word-reciter"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = [] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

